fix sign up button on mobile

--- a/src/styles/sass/admin/user.scss
+++ b/src/styles/sass/admin/user.scss
@@ -161,7 +161,7 @@
       position: relative;
 
       &:not(:has(img)) {
-        padding: 8px 16px 8px 18px;
+        padding: 4px 10px 4px 12px;
       }
 
       @media (max-width: 768px) {
